--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@tanstack/react-query": "^5.83.0",
     "@types/react-router-dom": "^5.3.3",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "recharts": "^2.15.4",
@@ -33,8 +35,10 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/chart.js": "^4.0.1",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.21",
